[tool.poetry]
name = "repl_python3_BOTS-BOT"
version = "0.1.0"
description = ""
authors = ["MrEncrypto <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
yahoo-fin = "^0.8.9"
discord = "^1.7.3"
yfinance = "^0.1.70"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
